test/spec_vectors/local_get/fail/module_8.wat
(module (func $type-empty-vs-i64 (local i64) (local.get 0)))